# diverse-gen

./: .gitignore  LICENSE  cifar_mnist.ipynb  cifar_mnist.py  cifar_mnist_sweep.ipynb  clean_and_convert.sh  config.py  disagree.py  dominos.ipynb  dominos.py  dominos_sweep.ipynb  exp_sweep.ipynb  measurement_tampering.ipynb  measurement_tampering.py  normal_imdb_data.ipynb  normal_imdb_data.py  pyproject.toml  run_exp.ipynb  run_exp.py  run_study.py  spur_corr_exp.ipynb  spur_corr_exp.py  spur_corr_exp_uncertain.ipynb  spur_corr_exp_uncertain.py  spur_corr_hparam_sweep.py  spur_corr_sweep.ipynb  spur_corr_sweep_aux_weight.py  spur_corr_sweep_hparam.py  test_spur_corr_exp.py  topk.py  toy_2d.ipynb  toy_2d.py  toy_2d_mix_rate_sweep_results.ipynb  toy_2d_mix_rate_sweeps.py
configs/: datasets.yaml  method_ds.yaml  methods.yaml
configs/mtd/: DivDis_diamonds.yaml  DivDis_generated_stories.yaml  FT_Trusted_diamonds.yaml  FT_Trusted_generated_stories.yaml  Measurement_Predictor_diamonds.yaml  Measurement_Predictor_generated_stories.yaml  Probe_for_Evidence_of_Tamper_diamonds.yaml  Probe_for_Evidence_of_Tamper_generated_stories.yaml  TopK_0.1_diamonds.yaml  TopK_0.1_generated_stories.yaml  mt_datasets.yaml  mtd_method_ds.yaml  mtd_methods.yaml
datasets/: cifar_mnist.py  dominos.py  fmnist_mnist.py
exp_scripts/: measurement_tampering.py  normal_imdb_data.py  spur_corr_exp.py
losses/: ace.py  dbat.py  loss_types.py  pass_through.py
models/: backbone.py  clip_vit.py  multi_model.py
nb_scripts/: measurement_tampering.ipynb  spur_corr_exp.ipynb
results/: cc_mix_rate_acc.csv  cc_mix_rate_alt_acc.csv  cc_mix_rate_source_acc.csv  cc_mix_rate_worst_acc.csv
spurious_datasets/: camelyon.py  celebA.py  cifar_mnist.py  civil_comments.py  cub.py  dominos.py  fmnist_mnist.py  multi_nli.py  toy_grid.py  utils.py  waterbirds.py
tests/: test_mtd.py  test_spur_corr_exp.py
toy_data/: grid.py  lms_5.py
util_scripts/: generate_configs.ipynb  generate_configs_mtd.ipynb
utils/: act_utils.py  exp_utils.py  proc_data_utils.py  utils.py
(+164 files in other folders)
