[tool.poetry]
name = "diverse-gen"
version = "0.1.0"
description = ""
authors = ["Oliver Daniels-Koch <danielskoch.oliver@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.41.1"
torch = "^2.3.0"
datasets = "^2.19.1"
matplotlib = "^3.9.2"
einops = "^0.8.0"
imageio = "^2.35.1"
scipy = "^1.14.1"
omegaconf = "^2.3.0"
nbconvert = "^7.16.4"
torchvision = "^0.20.0"
submitit = "^1.5.2"
ipykernel = "^6.29.5"
clip = {git = "https://github.com/openai/CLIP.git"}
scikit-learn = "^1.5.2"
wilds = "^2.0.0"
ipdb = "^0.13.13"
tensorboard = "^2.18.0"
accelerate = "^1.2.0"
nevergrad = "^1.0.8"
plotly = "^5.24.1"
pytest = "^8.3.4"
umap-learn = "^0.5.7"
optuna = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
